--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "emailjs": "^4.0.2",
+    "emailjs-com": "^3.2.0",
     "firebase": "^12.1.0",
     "gh-pages": "^3.2.3",
     "react": "^18.0.0",
