--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "emailjs-com": "^3.2.0",
     "firebase": "^12.1.0",
     "gh-pages": "^3.2.3",
+    "nodemon": "^3.1.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
